<resources>
    <string name="app_name">Karyawan</string>
    <string name="cuti">Cuti</string>
    <string name="izin">Izin</string>
    <string name="sakit">Sakit</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="nama">Nama</string>

    <string name="base64_info">data:image/jpeg;base64,</string>
    <string name="status">Status</string>
    <string name="tanggal_input">"Tanggal Input "</string>
    <string name="lama_hari">Lama Hari</string>
    <string name="jenis">Jenis Cuti</string>
    <string name="div">Divisi</string>
    <string name="ket">Keterangan</string>
    <string name="acc_mgr">Approve Manager</string>
    <string name="acc_hrd">Approve HRD</string>
</resources>
