<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlroot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5mdp"
        android:layout_marginLeft="@dimen/_10mdp"
        android:layout_marginBottom="@dimen/_10mdp"
        >

        <RelativeLayout
            android:id="@+id/rlimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.jackandphantom.circularimageview.RoundedImage
                android:layout_width="@dimen/_90mdp"
                android:layout_height="@dimen/_90mdp"
                android:src="@drawable/user"
                app:rounded_radius="50"
                android:id="@+id/civcuti" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rlnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/rlimage"
            android:layout_marginLeft="@dimen/_10mdp"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="15">

            <TextView
                android:id="@+id/tvnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"/>

                <TextView
                    android:id="@+id/tvtglinput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lama_hari"
                    android:layout_marginTop="@dimen/_10mdp"
                    android:layout_below="@id/tvnama" />

                <TextView
                    android:id="@+id/tvsts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:layout_marginTop="@dimen/_10mdp"
                    android:layout_below="@id/tvtglinput"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9">
                <TextView
                    android:id="@+id/tvnama1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/tvlama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvnama1"
                    android:layout_marginTop="@dimen/_10mdp"/>

                <TextView
                    android:id="@+id/tvsts1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvlama"
                    android:layout_marginTop="@dimen/_10mdp"/>


            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1mdp"
            android:background="@color/greenMeetAp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>

